# analytics-data-engg-play

./: .dvcignore  .env.example  .gitignore  .infisical.json  .mise.toml  .pre-commit-config.yaml  .user.yml  Dockerfile  README.md  Taskfile.yml  dagster.yaml  data.dvc  dbt_project.yml  docker-compose.yml  packages.yml  pg.Dockerfile  profiles.yml  pyproject.toml  scratch.ipynb  superset.Dockerfile  superset_config.py
.dvc/: config
docs/: open-vis.md
evidence/: package-lock.json
evidence/pages/: cchain.md  index.md  nasa_firms.md  ph_midterm_elections_2025.md
evidence/sources/cchain/: connection.yaml  disease_climate.sql  viirs.sql
initdb/: 00-create-extensions.sql  01-create-users.sql
src/: dbt_project.py  definitions.py  partitions.py  resources.py  sensors.py  settings.py
src/assets/: assets.py
src/assets/cchain/: assets.py  factory.py
src/assets/climate_air_quality/: assets.py
src/assets/dbt/: assets.py
src/assets/fires/: assets.py
src/assets/gigcal/: assets.py  schemas.py
src/assets/gpu_tracker/: assets.py  datablitz_products.graphql
src/assets/nasa_firms/: factory.py
src/assets/ph_mte25/: assets.py
src/defs/cchain_disease_climate_dashboard/: component.yaml
src/dlt_sources/: requirements.txt
src/dlt_sources/.dlt/: config.toml
src/internal/: core.py  utils.py
src/lib/: core.py  gpu_tracker.py
src/macros/: convert_acq_time_to_time.sql
src/models/: afg.sql  schema.yml  sources.yml
src/models/cchain/: _cchain__models.yml  cchain__climate_atmosphere.sql  cchain__climate_atmosphere_location.sql  cchain__disease_lgu_disaggregated_totals.sql  cchain__disease_pidsr_location.sql  cchain__disease_pidsr_totals.sql  cchain__location.sql  cchain__mapbox_health_facility_brgy_isochrones.sql  climate_atmosphere.sql  disease_pidsr_totals.sql  location.sql  schema.yml  sources.yml
src/models/cchain/marts/: _marts_cchain__models.yml  cchain__climate_atmosphere_location.sql  cchain__disease_climate.sql  cchain__disease_pidsr_location.sql
src/models/cchain/staging/: _cchain__sources.yml  _stg_cchain__models.yml  cchain__climate_atmosphere_stg.sql  cchain__disease_lgu_disaggregated_totals_stg.sql  cchain__disease_pidsr_totals_stg.sql  cchain__location_stg.sql  cchain__mapbox_health_facility_brgy_isochrones_stg.sql  schema.yml  stg_climate_atmosphere.sql  stg_disease_pidsr_totals.sql  stg_location.sql
src/models/gpu_tracker/: _gpu_tracker__models.yml  gpu_tracker__products.sql  gpu_tracker__variants.sql
src/models/gpu_tracker/bronze/: _bronze_gpu_tracker__schema.yml  _gpu_tracker__sources.yml  gpu_tracker__datablitz_products_bronze.sql  gpu_tracker__datablitz_variants_bronze.sql  gpu_tracker__dynaquest_bronze.sql  gpu_tracker__dynaquest_products_bronze.sql  gpu_tracker__dynaquest_variants_bronze.sql  gpu_tracker__easypc_variants_bronze.sql
src/models/gpu_tracker/silver/: _silver_gpu_tracker__schema.yml  gpu_tracker__products_silver.sql  gpu_tracker__variants_silver.sql
src/models/nasa_firms/: _nasa_firms__models.yml  nasa_firms__viirs.sql
src/models/nasa_firms/bronze/: _bronze_nasa_firms__schema.yml  nasa_firms__viirs_noaa20_bronze.sql  nasa_firms__viirs_noaa21_bronze.sql  nasa_firms__viirs_snpp_bronze.sql  schema.yml
src/models/nasa_firms/silver/: _silver_nasa_firms__models.yml  nasa_firms__viirs_silver.sql
src/models/nasa_firms/staging/: _nasa_firms__sources.yml  _stg_nasa_firms__models.yml  _stg_nasa_firms__schema.yml  nasa_firms__viirs_noaa20_stg.sql  nasa_firms__viirs_noaa21_stg.sql  nasa_firms__viirs_snpp_stg.sql  nasa_firms__viirs_stg.sql
src/models/ph_mte25/: _ph_mte25__schema.yml  ph_mte25__party.sql  ph_mte25__senator.sql
src/models/ph_mte25/staging/: _ph_mte25__sources.yml  _stg_ph_mte25__schema.yml  ph_mte25__party_stg.sql  ph_mte25__senator_stg.sql
src/models/staging/: schema.yml  stg_afg.sql
src/resources/: __init__.py  gma_api.py  instagram_api.py  nasa_firms_api.py  postgres.py  resources.py
src/resources/io_managers/: deltalake.py
src/schemas/: climate_air_quality.py  climate_atmosphere.py  disease_pidsr.py  disease_pidsr_totals.py  gpu_tracker.py  location.py
src/tests/generic/: schema.yml  test_adm_pcode_format.sql  test_length_is.sql  test_standard_date_format.sql
terraform/: .terraform.lock.hcl  backend.tf  main.tf  providers.tf
