[project]
name = "analytics-data-engg-play"
version = "0.1.0"
description = "Analytics & Data Engineering Playground"
authors = [
    { name = "Kenneth V. Domingo", email = "hello@kvd.studio" }
]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "dagster>=1.10.9,<2",
    "dagster-webserver>=1.10.9,<2",
    "dbt-core>=1.8.8,<2",
    "dagster-dbt>=0.26.9,<0.27",
    "polars==1.27.0",
    "dagster-polars>=0.26.9,<0.27",
    "pyarrow>=18.0.0,<19",
    "pydantic>=2.9.2,<3",
    "pydantic-settings>=2.6.1,<3",
    "dagster-postgres>=0.26.9,<0.27",
    "duckdb>=1.1.3,<2",
    "dagster-duckdb-polars>=0.26.9,<0.27",
    "dbt-duckdb>=1.9.0,<2",
    "country-converter~=1.2",
    "dagster-deltalake>=0.26.9,<0.27",
    "dagster-deltalake-polars>=0.26.9,<0.27",
    "dagster-aws>=0.26.9,<0.27",
    "httpx>=0.27.2,<0.28",
    "boto3-stubs[s3]>=1.37.30",
    "dagster-obstore>=0.2.3",
]

[dependency-groups]
dev = [
    "ruff>=0.6.5,<0.7",
    "ipython>=8.27.0,<9",
    "sqlfluff>=3.1.1,<4",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dagster]
module_name = "src.definitions"

[tool.ruff]
target-version = "py312"
ignore-init-module-imports = true

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B", "UP"]
ignore = ["E203", "E266", "E501", "E402"]

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["pydantic.validator"]

[tool.sqlfluff.core]
dialect = "duckdb"
templater = "jinja"
sql_file_exts = ".sql,.sql.j2,.dml,.ddl"
max_line_length = 88

[tool.sqlfluff.indentation]
indented_joins = false
indented_using_on = true
template_blocks_indent = false

[tool.sqlfluff.templater]
unwrap_wrapped_queries = true

[tool.sqlfluff.templater.jinja]
apply_dbt_builtins = true

[tool.sqlfluff.templater.dbt]
project_dir = "./"

[tool.sqlfluff.rules.capitalisation.keywords]
capitalisation_policy = "upper"
