[project]
name = "analytics-data-engg-play"
version = "0.1.0"
description = "Analytics & Data Engineering Playground"
authors = [
    { name = "Kenneth V. Domingo", email = "hello@kvd.studio" }
]
requires-python = "~=3.12.0"
readme = "README.md"
dependencies = [
    "dagster~=1.11.16",
    "dagster-webserver~=1.11.16",
    "dbt-core~=1.8.8",
    "dagster-dbt~=0.27.16",
    "polars[pyarrow]~=1.34",
    "dagster-polars~=0.27.7",
    "pyarrow~=19.0.0",
    "pydantic~=2.9.2",
    "pydantic-settings~=2.6.1",
    "dagster-postgres~=0.27.16",
    "duckdb~=1.1.3",
    "dagster-duckdb-polars~=0.27.16",
    "dbt-duckdb~=1.9.0",
    "country-converter~=1.2",
    "dagster-deltalake~=0.27.16",
    "dagster-deltalake-polars~=0.27.16",
    "dagster-aws~=0.27.16",
    "httpx[http2]~=0.27.2",
    "boto3-stubs[s3]>=1.37.30",
    "dagster-obstore>=0.2.3",
    "pandas>=2.2.3",
    "geopandas>=1.0.1",
    "shapely>=2.1.0",
    "polars-st>=0.4.0",
    "numpy>=2.2.2",
    "matplotlib>=3.10.1",
    "toml>=0.10.2",
    "duckdb-engine>=0.17.0",
    "plotly>=6.0.1",
    "deltalake>=0.25.5",
    "psycopg2-binary>=2.9.10",
    "asyncpg>=0.30.0",
    "sqlalchemy>=2.0.37",
    "loguru>=0.7.3",
    "countrycode>=0.4.0",
    "dagster-evidence>=0.1.5",
    "roman>=5.0",
    "fake-useragent>=2.2.0",
    "instaloader>=4.14.2",
    "alembic>=1.15.2",
    "curl-cffi>=0.13.0",
    "beautifulsoup4>=4.13.4",
    "lxml>=6.0.2",
    "aiofiles>=25.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6.5,<0.7",
    "ipython>=8.27.0,<9",
    "sqlfluff>=3.1.1,<4",
    "jupyter>=1.1.1",
    "notebook>=7.4.0",
    "jupysql>=0.11.1",
]

[tool.uv]
package = false

[tool.dagster]
module_name = "src.definitions"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "src"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B", "UP"]
ignore = ["E203", "E266", "E501", "E402"]
ignore-init-module-imports = true

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["pydantic.validator"]

[tool.sqlfluff.core]
dialect = "duckdb"
templater = "jinja"
sql_file_exts = ".sql,.sql.j2,.dml,.ddl"
max_line_length = 88
exclude_rules = ["AM04", "L032", "RF04"]

[tool.sqlfluff.indentation]
indented_joins = false
indented_using_on = true
template_blocks_indent = false

[tool.sqlfluff.templater]
unwrap_wrapped_queries = true

[tool.sqlfluff.templater.jinja]
apply_dbt_builtins = true

[tool.sqlfluff.templater.dbt]
project_dir = "./"

[tool.sqlfluff.rules.capitalisation.keywords]
capitalisation_policy = "upper"

[tool.sqlfluff.rules.references.keywords]
quoted_identifiers_policy = "table_aliases"

[tool.jupysql.SqlMagic]
autolimit = false
autopolars = true
feedback = 1
named_parameters = "enabled"
